tests/machine/x/ocaml/for_list_collection.error
stage: compile
error:
File "/workspace/mochi/tests/machine/x/ocaml/for_list_collection.ml", line 5, characters 5-6:
5 |   ) [1;2;3]
         ^
Error: This expression has type int but an expression was expected of type
         string


Context (around line 5):
   3 |   List.iter (fun n ->
   4 |     print_endline n
   5 |   ) [1;2;3]
   6 | 
