tests/machine/x/ocaml/for_list_collection.ml

let () =
  List.iter (fun n ->
    print_endline n
  ) [1;2;3]
